# resume-git

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  compile_resume.py  console.toml  deploy.yml  export_cli.py  migrate_import.py  pyproject.toml  resume.py  services.py
.github/workflows/: deploy.yml
api/: auth.py  deps.py  limits.py  main.py  routes.py  schemas.py
core/: __init__.py  agent.py  ai.py  diff.py  latex.py  pdf.py  prompts.py  schema.py  sections.py  tools.py  util.py
core/skills/: __init__.py  ask.md  ats.md  base-update.md  tailor.md
db/: __init__.py  models.py  repo.py  session.py
docs/superpowers/plans/: 2026-07-14-agentic-resume-assistant.md  2026-07-17-new-user-journey.md
docs/superpowers/specs/: 2026-07-14-resume-assistant-agentic-skills-design.md  2026-07-17-new-user-journey-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AuthScreen.tsx  BranchFlow.tsx  BranchRail.tsx  ChatPanel.tsx  CommitBar.tsx  CommitModal.tsx  Compare.tsx  ConnectInApp.tsx  CopyPasteAssistant.tsx  DiffPanel.tsx  DiffView.tsx  Editor.tsx  ImportPanel.tsx  Landing.tsx  LivePdfPreview.tsx  NetworkGraph.tsx  OnboardingWizard.tsx  PdfPreview.tsx  Settings.tsx  TailorFlow.tsx  (+6 more)
samples/: sample_resume.json
scripts/: pdf_smoke_test.py
tests/: test_account.py  test_agent.py  test_api.py  test_auth.py  test_copypaste.py  test_core.py  test_multitenant.py  test_prompts.py  test_skills.py  test_tools.py
(+9 files in other folders)
