[project]
name = "resume-manager"
version = "0.1.0"
description = "Web app for versioning, tailoring, and compiling a resume (JSON -> LaTeX -> PDF)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",       # local dev DB driver
    "asyncpg>=0.29",         # prod Postgres driver (Neon)
    "anthropic>=0.40",       # in-app AI tailoring
    "pyjwt[crypto]>=2.8",    # verify Cloudflare Access JWTs
    "httpx>=0.27",           # fetch Access signing keys
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["core", "db", "api"]
